RESOLVED FIXED188162
REGRESSION(r232795): [GStreamer] Too-eager ASSERT in MediaPlayerPrivateGStreamerBase::copyVideoTextureToPlatformTexture()
https://bugs.webkit.org/show_bug.cgi?id=188162
Summary REGRESSION(r232795): [GStreamer] Too-eager ASSERT in MediaPlayerPrivateGStrea...
Zan Dobersek
Reported 2018-07-30 04:09:04 PDT
The following two tests crash in MediaPlayerPrivateGStreamerBase::copyVideoTextureToPlatformTexture() while asserting on a zero-ID texture: - fast/canvas/webgl/texImage2D-video-flipY-false.html - fast/canvas/webgl/texImage2D-video-flipY-true.html The GstVideoFrameHolder constructor returns early for some reason, never mapping the video frame and retrieving the texture ID. Backtrace: STDERR: ASSERTION FAILED: textureID STDERR: /home/buildbot/wpe/wpe-linux-64-debug/build/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp(941) : virtual bool WebCore::MediaPlayerPrivateGStreamerBase::copyVideoTextureToPlatformTexture(WebCore::GraphicsContext3D*, Platform3DObject, GC3Denum, GC3Dint, GC3Denum, GC3Denum, GC3Denum, bool, bool) STDERR: 1 0x7f2534edf975 WTFCrash STDERR: 2 0x7f25338dd20d WebCore::MediaPlayerPrivateGStreamerBase::copyVideoTextureToPlatformTexture(WebCore::GraphicsContext3D*, unsigned int, unsigned int, int, unsigned int, unsigned int, unsigned int, bool, bool) STDERR: 3 0x7f2532fd88ea WebCore::MediaPlayer::copyVideoTextureToPlatformTexture(WebCore::GraphicsContext3D*, unsigned int, unsigned int, int, unsigned int, unsigned int, unsigned int, bool, bool) STDERR: 4 0x7f25329a8cdb WebCore::HTMLVideoElement::copyVideoTextureToPlatformTexture(WebCore::GraphicsContext3D*, unsigned int, unsigned int, int, unsigned int, unsigned int, unsigned int, bool, bool) STDERR: 5 0x7f2533852ec0 STDERR: 6 0x7f253385af2b STDERR: 7 0x7f253385312f STDERR: 8 0x7f2533853388 WebCore::WebGLRenderingContextBase::texImage2D(unsigned int, int, unsigned int, unsigned int, unsigned int, std::optional<WTF::Variant<WTF::RefPtr<WebCore::ImageData, WTF::DumbPtrTraits<WebCore::ImageData> >, WTF::RefPtr<WebCore::HTMLImageElement, WTF::DumbPtrTraits<WebCore::HTMLImageElement> >, WTF::RefPtr<WebCore::HTMLCanvasElement, WTF::DumbPtrTraits<WebCore::HTMLCanvasElement> >, WTF::RefPtr<WebCore::HTMLVideoElement, WTF::DumbPtrTraits<WebCore::HTMLVideoElement> > > >) STDERR: 9 0x7f2531d28404 STDERR: 10 0x7f2531d284e1 STDERR: 11 0x7f2531d41e74 STDERR: 12 0x7f2531d28587 WebCore::jsWebGLRenderingContextPrototypeFunctionTexImage2D(JSC::ExecState*) STDERR: 13 0x7f24dc5ff177 STDERR: LEAK: 1 WebPageProxy
Attachments
Patch (2.26 KB, patch)
2018-08-03 08:01 PDT, Ms2ger (he/him; ⌚ UTC+1/+2)
no flags
Archive of layout-test-results from ews205 for win-future (13.03 MB, application/zip)
2018-08-03 16:59 PDT, EWS Watchlist
no flags
Ms2ger (he/him; ⌚ UTC+1/+2)
Comment 1 2018-08-03 08:01:37 PDT
EWS Watchlist
Comment 2 2018-08-03 16:59:38 PDT
Comment on attachment 346485 [details] Patch Attachment 346485 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/8755825 New failing tests: imported/blink/transitions/unprefixed-transform.html legacy-animation-engine/imported/blink/transitions/unprefixed-transform.html
EWS Watchlist
Comment 3 2018-08-03 16:59:49 PDT
Created attachment 346564 [details] Archive of layout-test-results from ews205 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews205 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Michael Catanzaro
Comment 4 2018-08-04 14:46:15 PDT
Comment on attachment 346485 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=346485&action=review > Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:942 > - ASSERT(textureID); > if (!textureID) > return false; Phil, what were you going for here? Of course you have to assume textureID is not zero after the ASSERT.
WebKit Commit Bot
Comment 5 2018-08-05 03:10:17 PDT
Comment on attachment 346485 [details] Patch Clearing flags on attachment: 346485 Committed r234583: <https://trac.webkit.org/changeset/234583>
WebKit Commit Bot
Comment 6 2018-08-05 03:10:18 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2018-08-05 03:13:27 PDT
Note You need to log in before you can comment on or make changes to this bug.