[GStreamer] Remove unsound assertions in MediaPlayerPrivateGStreamerBase. https://bugs.webkit.org/show_bug.cgi?id=188162

Reviewed by Philippe Normand.

These assertions sometimes fail, and there's a runtime check right
after them anyway.

Tests: fast/canvas/webgl/texImage2D-video-flipY-false.html
       fast/canvas/webgl/texImage2D-video-flipY-true.html

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
(WebCore::MediaPlayerPrivateGStreamerBase::copyVideoTextureToPlatformTexture):
(WebCore::MediaPlayerPrivateGStreamerBase::nativeImageForCurrentTime):


Canonical link: https://commits.webkit.org/203432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234583 268f45cc-cd09-0410-ab3c-d52691b4dbfc